<resources>
    <string name="app_name">My Application</string>
    <string name="task1">Задание 1</string>
    <string name="inputA">Введите число А</string>/>
    <string name="inputB">Введите число B</string>
    <string name="button">Старт</string>
    <string name="result">Резульат</string>
    <string name="Dz16">Задание 16</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_task16">Следующее задание</string>
    <string name="cap">Часть3</string>
    <string name="rating">Введите рейтинг студента</string>
    <string name="performance" />
    <string name="button_start_task2_string">Старт</string>/>

</resources>