<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Dz16Fragment">

    <TextView
        android:id="@+id/cap"
        android:layout_width="161dp"
        android:layout_height="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="120dp"
        android:gravity="center_horizontal"
        android:text="@string/task1"
        android:textAllCaps="true"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputA"
      android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/cap"
        app:layout_constraintStart_toStartOf="@+id/cap"
        app:layout_constraintTop_toBottomOf="@+id/cap" />

    <EditText
        android:id="@+id/inputB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/inputB"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/inputA"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/inputA"
        app:layout_constraintTop_toBottomOf="@+id/inputA" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/result"
        android:textColor="@color/teal_200"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/inputB"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@+id/inputB"
        app:layout_constraintTop_toBottomOf="@+id/inputB" />
    <Button
        android:id="@+id/button_star_task16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="@+id/inputA"
        app:layout_constraintStart_toStartOf="@+id/inputA"
        app:layout_constraintTop_toBottomOf="@+id/result" />
    <Button
        android:id="@+id/button_next_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/next_task16"
        app:layout_constraintEnd_toEndOf="@+id/button_star_task16"
        app:layout_constraintStart_toStartOf="@+id/button_star_task16"
        app:layout_constraintTop_toBottomOf="@+id/button_star_task16" />
</androidx.constraintlayout.widget.ConstraintLayout>